# TASTE

./: .gitignore  KnownTypes.cs  LICENSE  LanguageMatrix.cs  Model.cs  README.md  TASTE.csproj  Transpiler.cs  pyproject.toml
Emit/: Emitter.cs
Emit/CPP/: CppEmitter.cs  CppTypes.cs
Parse/: ExpressionParser.cs  Parser.cs
Parse/Db/: DbKeywords.cs  DbParser.cs  DbSemanticAnalyzer.cs
examples/: person.taste
src/taste/: __init__.py  engine.py
src/taste.egg-info/: PKG-INFO  SOURCES.txt
src/taste/ast/: __init__.py  nodes.py
src/taste/emitters/: __init__.py  base.py  csharp_emitter.py  python_emitter.py
src/taste/mast/: __init__.py  nodes.py
src/taste/parsers/: __init__.py  base.py  taste_parser.py
src/taste/pipeline/: __init__.py  converter.py
tests/: test_converter.py  test_emitters.py  test_engine.py  test_mast.py  test_parser.py
